# softMipper

./: CMakeLists.txt  softmipcmd.cpp
